# recreation

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  MODDING.md  MULTIPLAYER.md  PROPOSAL_AC_SHADOWS_RTGI.md  README.md  REPORT_MORROWIND.md  REPORT_OBLIVION.md  REPORT_STARFIELD_PBR.md  REPORT_STARFIELD_TEXTURES.md  flake.nix  run-fnv.sh  run-fo3.sh  todolist.md
engine/audio/: CMakeLists.txt  ambient.cc  ambient.h  audio_clip.cc  audio_system.cc  audio_system.h  sound_catalog.cc  sound_catalog.h
engine/bethesda/: CMakeLists.txt  animation_data.cc  animation_data.h  archive.h  ba2.cc  bsa.cc  compression.cc  compression.h  converters.cc  converters.h  edit_session.cc  edit_session.h  facegen.cc  facegen.h  form_id.h  game_profile.cc  game_profile.h  head_morph.cc  head_morph.h  hkx.cc  hkx.h  hkx_anim.cc  hkx_anim.h  hkx_character.cc  hkx_character.h  hkx_physics.cc  hkx_physics.h  hkx_to_kinema.cc  hkx_to_kinema.h  hkx_to_physics.cc  hkx_to_physics.h  load_order.cc  load_order.h  material_db.cc  material_db.h  movement_type.cc  movement_type.h  nif.cc  nif.h  nif_gamebryo.cc  (+19 more)
engine/bethesda/src/: game_profile.cc  load_order.cc  plugin.cc
engine/core/: CMakeLists.txt  frame_timer.cc  frame_timer.h  input.h  input_actions.h  input_bindings.cc  input_bindings.h  job_system.cc  log.cc  math.h  mimalloc_override.cc  move_only_function.h  window.cc  window.h  window_android.cc  window_sdl3.cc  world_clock.cc  world_clock.h
engine/gamenet/: CMakeLists.txt  actor_sync.cc  actor_sync.h  asset_stream.cc  asset_stream.h  objective_marker_net.cc  objective_marker_net.h  protocol.h  quest_replication.cc  session.cc  session.h  stage_request.cc  war_map_net.cc  world_replication.cc  world_replication.h
engine/physics/: CMakeLists.txt  kinema_jolt.cc  physics_world.cc  physics_world.h  physics_world_stub.cc  shape_desc.h
engine/render/: CMakeLists.txt  RHI.md  ambient_occlusion.cc  ambient_occlusion.h  antialiasing.h  bindless.cc  bindless.h  clouds.cc  clouds.h  ddgi.cc  ddgi.h  denoiser_nrd.cc  denoiser_nrd.h  environment.cc  environment.h  exr_write.cc  fur.cc  fur.h  gaussian.cc  gaussian.h  gpu_cull.cc  gpu_cull.h  material_system.cc  material_system.h  mesh_pipeline.cc  mesh_pipeline.h  meshlet.cc  meshlet.h  overdraw.cc  particles.cc  particles.h  path_tracer.cc  path_tracer.h  post.cc  post.h  presets.cc  raytracing.cc  raytracing.h  render_graph.cc  render_graph.h  (+20 more)
engine/render/atmosphere/: aerial_perspective.cc  aerial_perspective.h  clouds.cc  clouds.h  environment.cc  environment.h  ltc_tables.h  precipitation.cc  precipitation.h  surface_weather.cc  surface_weather.h  volumetric_fog.cc  volumetric_fog.h
engine/render/core/: bindless.cc  bindless.h  dynamic_resolution.cc  dynamic_resolution.h  presets.cc  presets.h  render_graph.cc  render_graph.h  renderer.cc  renderer.h  settings.h
engine/render/d3d12/: d3d12_backend.h  d3d12_command_list.cc  d3d12_convert.cc  d3d12_device.cc  d3d12_headers.h  d3d12_swapchain.cc
engine/render/geometry/: fur.cc  fur.h  gaussian.cc  gaussian.h  hair_groom.cc  hair_groom.h  hair_strands.cc  hair_strands.h  particle_emitters.cc  particle_emitters.h  particles.cc  particles.h  water.cc  water.h  wboit.cc  wboit.h
engine/render/gi/: ddgi.cc  ddgi.h  denoiser_nrd.cc  denoiser_nrd.h  denoiser_rr.cc  denoiser_rr.h  local_shadows.cc  local_shadows.h  path_tracer.cc  path_tracer.h  raytracing.cc  raytracing.h  recon_path_tracer.cc  recon_path_tracer.h  restir_di.cc  restir_di.h  shadow.cc  shadow.h  shadow_trace.cc  shadow_trace.h
engine/render/null/: null_device.cc
engine/render/pipeline/: gpu_cull.cc  gpu_cull.h  material_system.cc  material_system.h  mesh_pipeline.cc  mesh_pipeline.h  meshlet.cc  meshlet.h
engine/render/post/: antialiasing.h  bloom.cc  bloom.h  depth_of_field.cc  depth_of_field.h  exposure.cc  exposure.h  frame_generation.cc  frame_generation.h  ngx_context.cc  ngx_context.h  overdraw.cc  overdraw.h  post.cc  post.h  taa.cc  ui_blur.cc  ui_blur.h  upscaler.cc  upscaler.h  upscaler_dlss.cc  upscaler_fsr3.cc
engine/render/rhi/: bindings.h  command_list.h  device.h  resources.h  rhi.cc  swapchain.h  types.h
engine/render/screenspace/: ambient_occlusion.cc  ambient_occlusion.h  reflection_trace.cc  reflection_trace.h  ssao.cc  ssao.h  ssgi.cc  ssgi.h  ssr.cc  ssr.h
engine/render/shaders/: bounds.vs.hlsl  copy.cs.hlsl  cull.cs.hlsl  ddgi_rays.cs.hlsl  fullscreen.vert  fur.ps.hlsl  gsplat.vs.hlsl  hdr_capture.cs.hlsl  irradiance.cs.hlsl  mesh.frag  mesh.ps.hlsl  mesh.vert  mesh.vs.hlsl  mesh_rt.ps.hlsl  meshlet.ms.hlsl  multiscatter_lut.cs.hlsl  nrd_pack.cs.hlsl  particle.ps.hlsl  particle.vs.hlsl  particle_sim.cs.hlsl  pathtrace.cs.hlsl  rtao.cs.hlsl  (+18 more)
engine/script/: CMakeLists.txt  papyrus_guest.cc  papyrus_guest.h  papyrus_vm.cc  papyrus_vm.h  script_system.cc  script_system.h  world_effect_sink.h
engine/world/: CMakeLists.txt  README.md  carriage_rig.cc  carriage_rig.h  cell_streaming.cc  cell_streaming.h  combat.h  components.h  grass_baker.cc  grass_baker.h  interaction.h  land_baker.cc  land_baker.h  navgrid.cc  navgrid.h  npc_ai.h  objective_marker.h  pathfind.h  prop_streaming.cc  prop_streaming.h  quest_world.cc  quest_world.h  steering_avoidance.h  terrain_edits.cc  terrain_edits.h
runtime/: CMakeLists.txt  actor_system.cc  actor_system.h  android_main.cc  camera_input.cc  carriage.cc  carriage.h  chargen.cc  chargen.h  chargen_layout.h  content_domain.cc  content_domain.h  content_load.cc  controls_settings.cc  debug_ui.cc  debug_ui.h  demo_scenes.cc  demo_scenes.h  editor.cc  editor.h  editor_catalog.cc  editor_io.cc  editor_layout.h  engine.cc  engine.h  engine_context.h  engine_internal.h  face.cc  face.h  first_run.cc  fly_camera.cc  fly_camera.h  fp_equipment.cc  fp_equipment.h  frame_loop.cc  gait_rate.h  game_input.cc  game_input.h  game_ui.cc  game_ui.h  (+29 more)
runtime/feature_gym/: README.md  feature_gym.cc  feature_gym.h
runtime/shaders/: thumb.ps.hlsl  thumb.vs.hlsl
runtime/ui/: chat.ugui  mp_prompt.ugui  nametag.ugui  pause_menu.ugui
tools/esminfo/: CMakeLists.txt  main.cc
(+577 files in other folders)
